--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node models/seed.js"
   },
   "author": "Timm Schoenborn",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -18,6 +20,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.0",
+    "node-fetch": "^3.2.10",
     "passport": "^0.6.0",
     "passport-http-bearer": "^1.0.1"
   }
