--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node models/seed.js"
+    "seed": "node app/models/seed.js"
   },
   "author": "Timm Schoenborn",
   "license": "ISC",
