--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Git Input",
+  "name": "git-input",
   "version": "1.0.0",
   "description": "An app for software engineers to read and post reviews of their employer companies.",
   "main": "server.js",
